--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </ul><p>Or in our members repo:</p>
 
 <ul>
+<li><a href="https://github.com/AlexCastano">https://github.com/AlexCastano</a></li>
 <li><a href="https://github.com/danigm">https://github.com/danigm</a></li>
 <li><a href="https://github.com/edulix">https://github.com/edulix</a></li>
 </ul><h3>Technologies we work with</h3>
