Added javaguirre to githubs

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <ul>
 <li><a href="https://github.com/danigm">https://github.com/danigm</a></li>
 <li><a href="https://github.com/edulix">https://github.com/edulix</a></li>
+<li><a href="https://github.com/javaguirre">https://github.com/javaguirre</a></li>
 </ul><h3>Technologies we work with</h3>
 
 <p><strong>Python</strong>: We have lots of experience in Python programming doing developments from simple scripts to full complex applications.</p>
